@@ -17,127 +17,131 @@
 package net.fabricmc.meta.utils;
 
 import java.io.IOException;
-import java.net.URL;
+import java.net.URI;
 import java.nio.charset.StandardCharsets;
 import java.nio.file.Files;
 import java.nio.file.Path;
-import java.nio.file.Paths;
+import java.time.OffsetDateTime;
 import java.util.ArrayList;
-import java.util.Collections;
 import java.util.Comparator;
+import java.util.HashMap;
+import java.util.HexFormat;
 import java.util.List;
+import java.util.Map;
 
-import com.google.gson.Gson;
-import com.google.gson.GsonBuilder;
-import com.google.gson.JsonParseException;
 import org.apache.commons.io.IOUtils;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 
+import net.fabricmc.meta.FabricMeta;
 import net.fabricmc.meta.data.VersionDatabase;
 
 public class MinecraftLauncherMeta {
-	// cache to allow meta to start up even while mc's servers are flaky
-	private static final Path MC_VERSIONS_CACHE = Paths.get("cache", "version_manifest.json");
-	private static final Gson GSON = new GsonBuilder().create();
+	private static final String EXTRA_META_URL = System.getProperty("extraMcMetaUrl");
 	private static final Logger LOGGER = LoggerFactory.getLogger(VersionDatabase.class);
 
-	List<Version> versions;
-
-	private MinecraftLauncherMeta() {
-	}
+	private final List<Version> versions;
+	private final Map<String, Integer> index;
 
 	private MinecraftLauncherMeta(List<Version> versions) {
 		this.versions = versions;
+
+		index = new HashMap<>(versions.size());
+
+		for (int i = 0; i < versions.size(); i++) {
+			index.put(versions.get(i).id(), i);
+		}
 	}
 
-	public static MinecraftLauncherMeta getMeta(boolean allowCache) throws IOException {
-		String cachedJson = Files.exists(MC_VERSIONS_CACHE) ? Files.readString(MC_VERSIONS_CACHE) : null;
-		String url = Reference.MC_METADATA_URL;
+	private static List<Version> getMeta(String url, boolean readFromCache, boolean writeToCache) throws IOException {
+		Path cacheFile = readFromCache || writeToCache ? FabricMeta.CACHE_DIR.resolve(url.substring(url.lastIndexOf('/') + 1)) : null;
+		String cachedJson = cacheFile != null && Files.exists(cacheFile) ? Files.readString(cacheFile) : null;
 
 		try {
-			String json = IOUtils.toString(new URL(url), StandardCharsets.UTF_8);
-			MinecraftLauncherMeta ret = GSON.fromJson(json, MinecraftLauncherMeta.class);
-			if (ret.versions.isEmpty()) throw new IOException("received empty version list");
+			String json = IOUtils.toString(URI.create(url), StandardCharsets.UTF_8);
+			List<Version> ret = parse(json);
 
-			// success, update cache if changed
-			if (!json.equals(cachedJson)) {
-				Files.createDirectories(MC_VERSIONS_CACHE.toAbsolutePath().getParent());
-				Files.writeString(MC_VERSIONS_CACHE, json);
+			if (writeToCache) {
+				if (ret.isEmpty()) throw new IOException("received empty version list"); // protect against overwriting cache with nothing
+
+				// success, update cache if changed
+				if (!json.equals(cachedJson)) { // cachedJson may be null
+					Files.createDirectories(cacheFile.toAbsolutePath().getParent());
+					Files.writeString(cacheFile, json);
+				}
 			}
 
 			return ret;
-		} catch (IOException | JsonParseException e) {
-			if (allowCache && cachedJson != null) {
+		} catch (Exception e) {
+			if (readFromCache && cachedJson != null) {
 				LOGGER.warn("Error retrieving MC metadata, using local cache: {}", e.toString());
 
-				return GSON.fromJson(cachedJson, MinecraftLauncherMeta.class);
+				return parse(cachedJson);
 			}
 
 			throw e;
 		}
 	}
 
-	public static MinecraftLauncherMeta getExperimentalMeta() throws IOException {
-		String url = Reference.LOCAL_FABRIC_MAVEN_URL+"net/minecraft/experimental_versions.json";
-		String json = IOUtils.toString(new URL(url), StandardCharsets.UTF_8);
-		return GSON.fromJson(json, MinecraftLauncherMeta.class);
+	private static List<Version> parse(String json) throws IOException {
+		MclMetaVersionManifest parsed = FabricMeta.GSON.fromJson(json, MclMetaVersionManifest.class);
+		List<Version> ret = new ArrayList<>(parsed.versions.size());
+
+		for (MclMetaVersionManifest.Version version : parsed.versions) {
+			byte[] hash = version.sha1() != null ? HexFormat.of().parseHex(version.sha1()) : null;
+			OffsetDateTime time = OffsetDateTime.parse(version.releaseTime());
+			boolean obfuscated = FabricMeta.MC_OBFUSCATION_CHECKER.isObfuscated(version.id(), version.url(), hash, time);
+
+			ret.add(new Version(version.id(),
+					version.type(),
+					version.url(),
+					hash,
+					time,
+					obfuscated));
+		}
+
+		return ret;
 	}
 
-	public static MinecraftLauncherMeta getAllMeta(boolean allowCache) throws IOException {
+	static final class MclMetaVersionManifest {
+		public List<Version> versions;
+
+		public record Version(String id, String type, String url, String releaseTime, String sha1) { }
+	}
+
+	public static MinecraftLauncherMeta getAllMeta(boolean allowCacheRead) throws IOException {
 		List<Version> versions = new ArrayList<>();
-		versions.addAll(getMeta(allowCache).versions);
-		versions.addAll(getExperimentalMeta().versions);
+		// use cache to allow meta to start up even while mc's servers are flaky
+		versions.addAll(getMeta(Reference.MC_METADATA_URL, allowCacheRead, true));
+		versions.addAll(getMeta(Reference.LOCAL_FABRIC_MAVEN_URL+"net/minecraft/experimental_versions.json", false, false));
+
+		if (EXTRA_META_URL != null) {
+			versions.addAll(getMeta(EXTRA_META_URL, false, false));
+		}
 
 		// Order by release time
-		versions.sort(Comparator.comparing(Version::getReleaseTime).reversed());
+		versions.sort(Comparator.comparing(Version::releaseTime).reversed());
 
 		return new MinecraftLauncherMeta(versions);
 	}
 
-	public boolean isStable(String id) {
-		return versions.stream().anyMatch(version -> version.id.equals(id) && version.type.equals("release"));
+	public List<Version> getVersions() {
+		return versions;
+	}
+
+	public Version getVersion(String id) {
+		Integer idx = index.get(id);
+
+		return idx != null ? versions.get(idx) : null;
 	}
 
 	public int getIndex(String version) {
-		for (int i = 0; i < versions.size(); i++) {
-			if (versions.get(i).id.equals(version)) {
-				return i;
-			}
-		}
-
-		return 0;
+		return index.getOrDefault(version, -1);
 	}
 
-	public List<Version> getVersions() {
-		return Collections.unmodifiableList(versions);
-	}
-
-	public static class Version {
-		String id;
-		String type;
-		String url;
-		String time;
-		String releaseTime;
-
-		public String getId() {
-			return id;
-		}
-
-		public String getType() {
-			return type;
-		}
-
-		public String getUrl() {
-			return url;
-		}
-
-		public String getTime() {
-			return time;
-		}
-
-		public String getReleaseTime() {
-			return releaseTime;
+	public record Version(String id, String type, String url, byte[] sha1, OffsetDateTime releaseTime, boolean obfuscated) {
+		public boolean isStable() {
+			return type.equals("release");
 		}
 	}
 }
